changed header to navbar.  updated comments and thread list styling.  moved navbar into a partial

--- a/templates/error.html
+++ b/templates/error.html
@@ -7,6 +7,10 @@
     ${head}
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            ${nav}
+        </div>
     <div class="nes-container is-dark is-rounded is-centered with-title">
         <p class="title redText">ERROR</p>
         <div class="row align-items-center">
@@ -22,6 +26,7 @@
 <div class ="d-flex justify-content-around">
     <a href="/threads">View A list of threads</a>
 
+</div>
 </div>
 </body>
 </html>
