--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,8 +1,6 @@
 <!-- bootstrap 4.5 -->
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
-/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <!-- NES.css -->
 <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
 <link
@@ -11,10 +9,6 @@
 />
 <!-- My CSS -->
 <link href="/css/style.css" rel="stylesheet" type="text/css">
-<style>
-   
-</style>
-
 
 <!-- Javascript goes Here -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
