--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,10 +1,28 @@
 <div class="nes-container is-dark is-rounded is-centered with-title container-fluid">
     <p class="title redText">express.Forum</p>
 
-<nav>
-    <div class="d-flex justify-content-around">
-        <a href="/threads">View A list of threads</a>
+
+    <!-- <div class="d-flex justify-content-around">
+        <a href="/threads">ALL</a>
         <a href="/login">Login</a>
+    </div> -->
+    <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+       </button>
+         
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/threads">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">New </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Login</a>
+          </li>
+        </ul>
     </div>
-</nav>
+      </nav>
 </div>
