--- a/templates/thread.html
+++ b/templates/thread.html
@@ -9,17 +9,15 @@
 </head>
 
 <body>
-    <!-- <div class="nes-container is-dark is-rounded is-centered with-title">
-        <p class="title redText">express.Forum</p>
-    <h1 class="text-center">An Expressly Express Forum</h1>
-</div> -->
-    <main class="container">
+   
+    <div class="container">
 <!-- HEADER/NAV -->
 <div class="row">
     ${nav}
 </div>
 
 <!--Main Content  -->
+<div class="row">
         <div class="nes-container is-rounded is-dark with-title">
             <p class="title"><span class="yellowText">${thread.name}</span>.${thread.title}</p>
             <!-- <div class = "list-group"> -->
@@ -35,22 +33,24 @@
             <i class="nes-icon is-medium heart"></i>
         
             </div>
-            
+        </div> 
+        </div>
         
         </br>
-
+<div class="row">
         <div id="commentContainer" class="nes-container is-rounded is-dark with-title nesThin">
             <p class="title">comments<span class="yellowText">.all</span></p>
             <div class="lists  is-dark">
                 <ul class="nes-list is-dark is-disc list-unstyled comment-list">
                     ${thread.comments.map((comment) => {
-                    return `<li class="comment rounded-bottom mb-2 p-2"><span class="yellowText">${comment.name}</span> - "${comment.content}"</li>`
+                    return `<li class="comment rounded-bottom shadow-lg  mb-2 p-2"><span class="yellowText">${comment.name}</span> - "${comment.content}"</li>`
                     }).join('')}
                 </ul>
             </div>
         </div>
+    </div>
     </br>
-
+<div class="row">
         <div id="nesThin" class="nes-container is-rounded is-dark with-title nesThin">
             <p class="title">comments<span class="yellowText">.add</span></p>
             <form action="/threads/${thread.id}/comments" method="POST">
@@ -73,12 +73,15 @@
             </form>
 
         </div>
+    </div>
 
         <div class="d-flex justify-content-around">
             <a href="/threads">View A list of threads</a>
 
         </div>
-    </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
     <script>
 
         document.getElementById('likeBtn').addEventListener('click', () => {
