--- a/templates/threadList.html
+++ b/templates/threadList.html
@@ -45,7 +45,7 @@
             <div class="threadList" id="allThreads">
                 ${threads.map((thread) => {
                 return `
-                <div class="singleThread  mb-2 p-2">
+                <div class="singleThread shadow-lg  mb-2 p-2">
                 <div class="row">
                     <div class="col d-flex align-items-center  ">
                      <a href="/threads/${thread.id}" class="threadTitle mb-1">${thread.title} </a>
@@ -95,11 +95,11 @@
         </div>
     
     </div>
-</div>
 
         
 
    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 </body>
 
