--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,12 +1,13 @@
 <div class="nes-container is-dark is-rounded is-centered with-title container-fluid">
-    <p class="title redText">express.Forum</p>
+    <p class="title redText">Expressly Express 1.0</p>
 
 
     <!-- <div class="d-flex justify-content-around">
         <a href="/threads">ALL</a>
         <a href="/login">Login</a>
     </div> -->
-    <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
+    <nav class="navbar navbar-expand-sm navbar-dark pt-0 ">
+        <a id="navbar-brand" class="navbar-brand" href="#">Forum</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
        </button>
