--- a/templates/thread.html
+++ b/templates/thread.html
@@ -15,10 +15,10 @@
 <div class="row">
     ${nav}
 </div>
-
+</br>
 <!--Main Content  -->
 <div class="row">
-        <div class="nes-container is-rounded is-dark with-title">
+        <div class="col nes-container is-rounded is-dark with-title">
             <p class="title"><span class="yellowText">${thread.name}</span>.${thread.title}</p>
             <!-- <div class = "list-group"> -->
 
@@ -26,11 +26,11 @@
             <p class="threadContent">${thread.content}</p>
             
 
-        <div class="row d-flex justify-content-around" >
+        <div class="row d-flex justify-content-around align-items-center" >
             <button id="likeBtn" threadId=${thread.id} type="submit" class="nes-btn  ml-auto">Like</button>
 
-            <div class="yellowText counter-large" id="counter">${thread.likes}</div> 
-            <i class="nes-icon is-medium heart"></i>
+            <div class="yellowText counter-large " id="counter">${thread.likes}</div> 
+            <i class="nes-icon  heart"></i>
         
             </div>
         </div> 
@@ -38,7 +38,7 @@
         
         </br>
 <div class="row">
-        <div id="commentContainer" class="nes-container is-rounded is-dark with-title nesThin">
+        <div id="commentContainer" class="col nes-container is-rounded is-dark with-title nesThin">
             <p class="title">comments<span class="yellowText">.all</span></p>
             <div class="lists  is-dark">
                 <ul class="nes-list is-dark is-disc list-unstyled comment-list">
@@ -49,9 +49,9 @@
             </div>
         </div>
     </div>
-    </br>
+ 
 <div class="row">
-        <div id="nesThin" class="nes-container is-rounded is-dark with-title nesThin">
+        <div id="nesThin" class="col nes-container is-rounded is-dark with-title nesThin">
             <p class="title">comments<span class="yellowText">.add</span></p>
             <form action="/threads/${thread.id}/comments" method="POST">
                 <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
@@ -75,10 +75,10 @@
         </div>
     </div>
 
-        <div class="d-flex justify-content-around">
+        <!-- <div class="d-flex justify-content-around">
             <a href="/threads">View A list of threads</a>
 
-        </div>
+        </div> -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
