added cuttr.js to truncate thread previews on main page

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -12,5 +12,6 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
 
 <!-- Javascript goes Here -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cuttr/1.2.0/cuttr.min.js"></script>
    
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
