--- a/templates/threadList.html
+++ b/templates/threadList.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                     <div class="row ">
-                        <span class="col d-block text-truncate text-white threadPreview" style="max-width: 100%;">
+                        <span class="col d-block  text-white threadPreview">
                             ${thread.content}
                            </span>
                     </div>
@@ -100,7 +100,12 @@
 
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
+    <script>new Cuttr('.threadPreview', {
+        //options here
+        truncate: 'words',
+        length: 25
+      });
+      </script>
 </body>
 
 </html>
