--- a/templates/thread.html
+++ b/templates/thread.html
@@ -56,11 +56,11 @@
             <form action="/threads/${thread.id}/comments" method="POST">
                 <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
                     <label for="dark_field" style="color:#fff;">Your Name</label>
-                    <input type="text" id="dark_field" class="nes-input is-dark" name="name">
+                    <input type="text" id="dark_field" class="nes-input is-dark" name="name"required>
                 </div>
                 <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline ">
                     <label for="textarea_field text-small">leave a comment</label>
-                    <textarea id="newThreadText" class="nes-textarea is-dark" name="content"></textarea>
+                    <textarea id="newThreadText" class="nes-textarea is-dark" name="content" required></textarea>
 
                     </br>
 
